pom.xml을 수정했습니다. 어플리케이션 yml을 추가하였습니다.

--- a/bootStudy/pom.xml
+++ b/bootStudy/pom.xml
@@ -2,47 +2,63 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<!-- spring-boot-starter-parent 스프링부트에 필요한 dependency를 자동으로 추가하여 준다. -S- -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
+	
 	<groupId>com.bootStudy.web</groupId>
 	<artifactId>bootStudy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bootStudy</name>
 	<description>Demo project for Spring Boot</description>
 
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 
+	<!-- dependencies태그 안에는 프로젝트와 의존 관계에 있는 라이브러리들을 관리 한다.-->
 	<dependencies>
+		<!-- 스프링부트 스프링 시큐리티 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		<!-- 타임리프 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
+		<!-- Spring MVC를 사용한 RESTful서비스를 개발하는데 사용  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- 데브툴즈  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- 롬복 -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- Junit, Hamcrest, Mockito를 포함하는 스프링 어플리케이션을 테스트 가능하도록 지원  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -54,13 +70,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- 스프링 시큐리티 테스르틀 위한 도구 지원-->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
