--- a/bootStudy/src/main/resources/application.yml
+++ b/bootStudy/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 #서버 및 포트
+
 server:
   port: 8080
     
@@ -13,9 +14,14 @@ logging:
                                   #TRACE > DEBUG > INFO > WARN > ERROR
 
 
+
 #devTools
 spring:
-  devtools:    #livereload:      #enabled: true               
+  devtools:    restart:      enabled: true  
+      exclude:            livereload:
+      enabled: false               
       #livereload기능을 사용하기 위해선 Chrome, Firefox, Safari용 플러그인을 각각 사용하시는 브라우저에 추가해 주어야 함
-    restart:      enabled: false #자동리스타트 미사용
-      exclude: 
+  thymeleaf:    cache: false      
+  
+        
+
